fixing ordering of event component and spacing for calendar title

--- a/src/assets/scss/components/_calendar.scss
+++ b/src/assets/scss/components/_calendar.scss
@@ -9,6 +9,7 @@ $number: 42;
 #calendar-wrap {
   position:relative;
   .calendar-header {
+    margin:1rem 0;
     display:flex;
     align-items: center;
     .month-selector {
